2009-11-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/term.c (enhanced_recursion): Replace in-line warnings sent to
	stderr by instead calling int_warn().

2009-11-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/breader.c:  Give df_libgd_get_pixel() a valid return value even
	if it's only a dummy function because there is no png support.

2009-11-01  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.dj2 config/makefile.cyg config/makefile.mgw
	config/makefile.nt config/makefile.os2: Added GNUPLOT_JS_DIR.

	* term/canvas.trm (CANVAS_graphics): Fix // vs \ and / for jsdir and
	Windows.

2009-10-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/show.c (show_version): Fit width of welcome messages into 80
	characters. 

2009-10-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.h src/util.h:  Tell gcc that routines bail_to_command_line(),
	int_error(), graph_error(), and os_error() do not return. 
	#ifdef __GNUC__ ...  __attribute__((noreturn));
	This avoids spurious warnings about uninitialized variables from
	call sites like:
	    int foo;
	    if (END_OF_COMMAND || !(foo = try_to_get_string()))
		int_error(c_token,"missing string");
	    baz = foo;

2009-10-30  Juergen Wieferink  <wieferink@freenet.de>

	* src/command.c, src/command.h (do_string, do_string_and_free):
	Use to different functions depending on whether the command string has
	to be freed.  Don't reset screen_ok.
	
	* src/command.c, src/command.h (do_string_replot), src/fit.c
	(fit_interrupt): Use do_string() instead of do_line().

	* src/command.c, src/misc.c, src/mouse.c, src/plot.c src/term.c:
	Adjust calls to do_string().

	* src/plot2d.c src/graph3d.c src/gplt_x11.c term/lua.trm term/latex.trm
	src/wxterminal/gp_cairo_helpers.c:
	Silence gcc -Wall warnings.

	* src/misc.c: Remove latin1 char.

	* term/x11.trm: Silence valgrind warning.

	* demo/vector.dem, demo/fit.dem: Add closing quotes.

2009-10-30  Petr Mikulik  <mikulik@physics.muni.cz>
